login screen works. no login labels yet though so it doen't do anything.

--- a/src/breslin/vclient/CMakeLists.txt
+++ b/src/breslin/vclient/CMakeLists.txt
@@ -122,6 +122,7 @@ set(HDRS
 	#application
 	../clientside/application/BaseApplication.h
 	../clientside/application/applicationBreslin.h
+	../clientside/application/states/applicationLogin.h
 	../clientside/application/states/applicationMain.h
 	../clientside/application/states/applicationPlay.h
 	../clientside/application/states/applicationGlobal.h
@@ -184,6 +185,7 @@ set(SRCS
 	#application
 	../clientside/application/BaseApplication.cpp
 	../clientside/application/applicationBreslin.cpp
+	../clientside/application/states/applicationLogin.cpp
 	../clientside/application/states/applicationMain.cpp
 	../clientside/application/states/applicationPlay.cpp
 	../clientside/application/states/applicationGlobal.cpp
@@ -260,6 +262,7 @@ set(HDRS
 	#application
 	../clientside/application/BaseApplication.h
 	../clientside/application/applicationBreslin.h
+	../clientside/application/states/applicationLogin.h
 	../clientside/application/states/applicationMain.h
 	../clientside/application/states/applicationPlay.h
 	../clientside/application/states/applicationGlobal.h
@@ -321,6 +324,7 @@ set(SRCS
 	#application
 	../clientside/application/BaseApplication.cpp
 	../clientside/application/applicationBreslin.cpp
+	../clientside/application/states/applicationLogin.cpp
 	../clientside/application/states/applicationMain.cpp
 	../clientside/application/states/applicationPlay.cpp
 	../clientside/application/states/applicationGlobal.cpp
