--- a/src/breslin/vclient/CMakeLists.txt
+++ b/src/breslin/vclient/CMakeLists.txt
@@ -127,6 +127,9 @@ set(HDRS
 	../clientside/application/states/applicationPlay.h
 	../clientside/application/states/applicationGlobal.h
 	../clientside/application/states/applicationInitialize.h
+
+	#io
+	../clientside/io/editString.h
 	
 	#game	
 	../clientside/game/game.h
@@ -190,6 +193,9 @@ set(SRCS
 	../clientside/application/states/applicationPlay.cpp
 	../clientside/application/states/applicationGlobal.cpp
 	../clientside/application/states/applicationInitialize.cpp
+
+	#io
+	../clientside/io/editString.h
 	
 	#game	
 	../clientside/game/game.cpp
@@ -268,6 +274,9 @@ set(HDRS
 	../clientside/application/states/applicationGlobal.h
 	../clientside/application/states/applicationInitialize.h
 	
+	#io
+	../clientside/io/editString.h
+	
 	#game
 	../clientside/game/game.h
 	../clientside/game/gameTag.h
@@ -330,6 +339,9 @@ set(SRCS
 	../clientside/application/states/applicationGlobal.cpp
 	../clientside/application/states/applicationInitialize.cpp
 
+	#io
+	../clientside/io/editString.cpp
+	
 	#game	
 	../clientside/game/game.cpp
 	../clientside/game/gameTag.cpp
