--- a/src/breslin/vclient/CMakeLists.txt
+++ b/src/breslin/vclient/CMakeLists.txt
@@ -157,6 +157,9 @@ set(HDRS
 	
 	#billboard
 	../clientside/billboard/objectTitle.h
+
+	#editString
+	../clientside/io/editString.h
 	
 )
  
@@ -220,6 +223,8 @@ set(SRCS
 	#billboard
 	../clientside/billboard/objectTitle.cpp
 	
+	#editString
+	../clientside/io/editString.cpp
 )
 endif (WIN32)
 
@@ -294,7 +299,9 @@ set(HDRS
 	
 	#billboard
 	../clientside/billboard/objectTitle.h
-	
+
+	#editString
+	../clientside/io/editString.h
 )
  
 set(SRCS
@@ -357,6 +364,8 @@ set(SRCS
 	#billboard
 	../clientside/billboard/objectTitle.cpp
 	
+	#editString
+	../clientside/io/editString.cpp
 )
 endif (UNIX)
 
