going back to when schools worked.

--- a/src/breslin/vserver/CMakeLists.txt
+++ b/src/breslin/vserver/CMakeLists.txt
@@ -261,8 +261,8 @@ set(HDRS
 	#game
 	../serverside/game/game.h
 		#tag
-	#../serverside/game/gameTag.h
-	#../serverside/game/gameTagAll.h
+	../serverside/game/gameTag.h
+	../serverside/game/gameTagAll.h
 	
 
 	#tdreamsock
@@ -275,8 +275,8 @@ set(HDRS
 	#shape
 	../serverside/shape/shape.h
 		#tag
-	#../serverside/shape/shapeTag.h
-	#../serverside/shape/shapeTagAll.h
+	../serverside/shape/shapeTag.h
+	../serverside/shape/shapeTagAll.h
 		
 	#move
 	../serverside/ability/move/move.h
@@ -316,14 +316,14 @@ set(HDRS
 	#server
 	../serverside/server/server.h
 		#tag
-	#../serverside/server/serverTag.h
-	#../serverside/server/serverTagAll.h
+	../serverside/server/serverTag.h
+	../serverside/server/serverTagAll.h
 	
 	#client
 	../serverside/client/client.h
 		#tag
-	#../serverside/client/clientTag.h
-	#../serverside/client/clientTagAll.h
+	../serverside/client/clientTag.h
+	../serverside/client/clientTagAll.h
 )
  
 set(SRCS
@@ -337,8 +337,8 @@ set(SRCS
 	#game
 	../serverside/game/game.cpp
 		#tag
-	#../serverside/game/gameTag.cpp
-	#../serverside/game/gameTagAll.cpp
+	../serverside/game/gameTag.cpp
+	../serverside/game/gameTagAll.cpp
 	
 	#dreamsock
 	../serverside/tdreamsock/dreamSockLog.cpp
@@ -350,8 +350,8 @@ set(SRCS
 	#shape
 	../serverside/shape/shape.cpp
 		#tag
-	#../serverside/shape/shapeTag.cpp
-	#../serverside/shape/shapeTagAll.cpp
+	../serverside/shape/shapeTag.cpp
+	../serverside/shape/shapeTagAll.cpp
 	
 	#move
 	../serverside/ability/move/move.cpp
@@ -383,14 +383,14 @@ set(SRCS
 	#server
 	../serverside/server/server.cpp
 		#tag
-	#../serverside/server/serverTag.cpp
-	#../serverside/server/serverTagAll.cpp
+	../serverside/server/serverTag.cpp
+	../serverside/server/serverTagAll.cpp
 	
 	#client
 	../serverside/client/client.cpp
 		#tag
-	#../serverside/client/clientTag.cpp
-	#../serverside/client/clientTagAll.cpp
+	../serverside/client/clientTag.cpp
+	../serverside/client/clientTagAll.cpp
 
 )
 endif (WIN32)
@@ -407,8 +407,8 @@ set(HDRS
 	#game
 	../serverside/game/game.h
 		#tag
-	#../serverside/game/gameTag.h
-	#../serverside/game/gameTagAll.h
+	../serverside/game/gameTag.h
+	../serverside/game/gameTagAll.h
 	
 	#network
 	../serverside/network/network.h
@@ -420,8 +420,8 @@ set(HDRS
 		#shape
 	../serverside/shape/shape.h
 		#tag
-	#../serverside/shape/shapeTag.h
-	#../serverside/shape/shapeTagAll.h
+	../serverside/shape/shapeTag.h
+	../serverside/shape/shapeTagAll.h
 	
 	#move
 	../serverside/ability/move/move.h
@@ -461,14 +461,14 @@ set(HDRS
 	#server
 	../serverside/server/server.h
 		#tag
-	#../serverside/server/serverTag.h
-	#../serverside/server/serverTagAll.h
+	../serverside/server/serverTag.h
+	../serverside/server/serverTagAll.h
 	
 	#client
 	../serverside/client/client.h
 		#tag
-	#../serverside/client/clientTag.h
-	#../serverside/client/clientTagAll.h
+	../serverside/client/clientTag.h
+	../serverside/client/clientTagAll.h
 	
 )
  
@@ -483,8 +483,8 @@ set(SRCS
 	#game
 	../serverside/game/game.cpp
 		#tag
-	#../serverside/game/gameTag.cpp
-	#../serverside/game/gameTagAll.cpp
+	../serverside/game/gameTag.cpp
+	../serverside/game/gameTagAll.cpp
 
 	#dreamsock
 	../serverside/tdreamsock/dreamSockLog.cpp
@@ -496,8 +496,8 @@ set(SRCS
 	#shape
 	../serverside/shape/shape.cpp
 		#tag
-	#../serverside/shape/shapeTag.cpp
-	#../serverside/shape/shapeTagAll.cpp
+	../serverside/shape/shapeTag.cpp
+	../serverside/shape/shapeTagAll.cpp
 	
 	#move
 	../serverside/ability/move/move.cpp
@@ -529,14 +529,14 @@ set(SRCS
 	#server
 	../serverside/server/server.cpp
 		#tag
-	#../serverside/server/serverTag.cpp
-	#../serverside/server/serverTagAll.cpp
+	../serverside/server/serverTag.cpp
+	../serverside/server/serverTagAll.cpp
 	
 	#client
 	../serverside/client/client.cpp
 		#tag
-	#../serverside/client/clientTag.cpp
-	#../serverside/client/clientTagAll.cpp
+	../serverside/client/clientTag.cpp
+	../serverside/client/clientTagAll.cpp
 
 )
 endif (UNIX)
