--- a/src/breslin/vserver/CMakeLists.txt
+++ b/src/breslin/vserver/CMakeLists.txt
@@ -260,6 +260,7 @@ set(HDRS
 	
 	#game
 	../serverside/game/game.h
+	../serverside/game/gameTag.h
 
 	#tdreamsock
 	../serverside/tdreamsock/dreamSockLog.h
@@ -323,6 +324,7 @@ set(SRCS
 
 	#game
 	../serverside/game/game.cpp
+	../serverside/game/gameTag.cpp
 	
 	#dreamsock
 	../serverside/tdreamsock/dreamSockLog.cpp
@@ -381,6 +383,7 @@ set(HDRS
 	
 	#game
 	../serverside/game/game.h
+	../serverside/game/gameTag.h
 	
 	#network
 	../serverside/network/network.h
@@ -444,6 +447,7 @@ set(SRCS
 	
 	#game
 	../serverside/game/game.cpp
+	../serverside/game/gameTag.cpp
 
 	#dreamsock
 	../serverside/tdreamsock/dreamSockLog.cpp
