--- a/src/breslin/vserver/CMakeLists.txt
+++ b/src/breslin/vserver/CMakeLists.txt
@@ -302,6 +302,9 @@ set(HDRS
 
 	#question
 	../serverside/question/question.h
+
+	#battle
+	../serverside/battle/battle.h
 	
 )
  
@@ -366,6 +369,8 @@ set(SRCS
 	#question
 	../serverside/question/question.cpp
 	
+	#battle
+	../serverside/battle/battle.cpp
 )
 include_directories( ${OIS_INCLUDE_DIRS}
 	${OGRE_INCLUDE_DIRS}
