now we have serverPartido...next all question stuff should go to serverPartido and really school stuff too...

--- a/src/breslin/vserver/CMakeLists.txt
+++ b/src/breslin/vserver/CMakeLists.txt
@@ -293,6 +293,7 @@ set(HDRS
 	
 	#server
 	../serverside/server/server.h
+	../serverside/server/serverPartido.h
 	
 	#client
 	../serverside/client/client.h
@@ -359,6 +360,7 @@ set(SRCS
 	
 	#server
 	../serverside/server/server.cpp
+	../serverside/server/serverPartido.cpp
 	
 	#client
 	../serverside/client/client.cpp
