--- a/src/breslin/vclient/CMakeLists.txt
+++ b/src/breslin/vclient/CMakeLists.txt
@@ -135,6 +135,7 @@ set(HDRS
 	../clientside/game/states/gameGlobal.h
 	../clientside/game/states/gameInitialize.h
 	../clientside/game/states/gamePlay.h
+	../clientside/game/states/gamePartidoPlay.h
 	../clientside/game/states/gameBattle.h
 	../clientside/game/states/gamePause.h
 
@@ -200,6 +201,7 @@ set(SRCS
 	../clientside/game/states/gameGlobal.cpp
 	../clientside/game/states/gameInitialize.cpp
 	../clientside/game/states/gamePlay.cpp
+	../clientside/game/states/gamePartidoPlay.cpp
 	../clientside/game/states/gameBattle.cpp
 	../clientside/game/states/gamePause.cpp
 	
@@ -279,6 +281,7 @@ set(HDRS
 	../clientside/game/states/gameGlobal.h
 	../clientside/game/states/gameInitialize.h
 	../clientside/game/states/gamePlay.h
+	../clientside/game/states/gamePartidoPlay.h
 	../clientside/game/states/gameBattle.h
 	../clientside/game/states/gamePause.h
 	
@@ -343,6 +346,7 @@ set(SRCS
 	../clientside/game/states/gameGlobal.cpp
 	../clientside/game/states/gameInitialize.cpp
 	../clientside/game/states/gamePlay.cpp
+	../clientside/game/states/gamePartidoPlay.cpp
 	../clientside/game/states/gameBattle.cpp
 	../clientside/game/states/gamePause.cpp
 	
