works. next: computer or battle result if you don't answer in certain time.

--- a/src/breslin/vserver/CMakeLists.txt
+++ b/src/breslin/vserver/CMakeLists.txt
@@ -298,7 +298,7 @@ set(HDRS
 	../serverside/computer/computer.h
 	../serverside/computer/partido/computerPartido.h
 	
-	#ai states
+	#computer states
 	../serverside/computer/states/computerStates.h	
 	../serverside/computer/partido/states/computerPartidoStates.h	
 	
